[tool.poetry]
name = "password-learn"
version = "0.1.0"
description = "A simple script to practice learning a new password"
authors = ["Joshu Coats <rhwlo@rhwlo.com>"]

[tool.poetry.dependencies]
python = "^3.7"
bcrypt = "^3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
password_learn = "password_learn:main"
